# kleinanzeigen-crawler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
exports/: newborn-girl-56.html
src/kleinanzeigen_crawler/: __init__.py  cli.py  crawler.py  errors.py  export_sets.py  models.py  parser.py  platforms.py  storage.py
tests/: test_cli.py  test_export_sets.py  test_parser.py  test_storage.py  test_vinted.py
tests/fixtures/: blocked.html  detail_page.html  list_page.html  vinted_catalog_page1.json  vinted_catalog_page2.json  vinted_item.html
