[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kleinanzeigen-crawler"
version = "0.1.0"
description = "Local CLI crawler and search tool for public Kleinanzeigen and Vinted user listings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "lxml>=5.0.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "respx>=0.21.0",
]

[project.scripts]
kleinanzeigen-crawler = "kleinanzeigen_crawler.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/kleinanzeigen_crawler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
